--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,100 @@
-body {
+*,
+*::after,
+*::before {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Vazir", sans-serif;
+  transition: all 0.4s ease;
+}
+body {
+  font-size: 62.5%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --color-primary: #10b981;
+  --color-primary-light: #34d399;
+  --color-secondary-light: #d1fae5;
+  --color-secondary-dark: #6ee7b7;
+  --color-navbar: #f8f8f8;
+  --color-headings: #000;
+  --color-body: #333333;
+  --color-white: #fff;
+}
+
+.navList {
+  list-style-type: none;
+  display: flex;
+  align-items: center;
+  height: 50px;
+  background-color: var(--color-body);
+}
+li {
+  display: flex;
+  align-items: center;
+}
+
+.navItem,
+.sideItem {
+  padding: 10px 7px;
+  color: var(--color-navbar);
+  text-decoration-line: none;
+  font-weight: 400;
+  font-size: 1.3rem;
+  border: 3px solid var(--color-body);
+}
+.sideItem {
+  color: var(--color-body);
+  border: 3px solid var(--color-white);
+}
+.navItem:hover {
+  color: var(--color-primary);
+  border-bottom: 3px solid var(--color-primary);
+}
+
+footer {
+  margin-top: 50px;
+}
+.activeLink {
+  color: var(--color-primary);
+  border-bottom: 3px solid var(--color-primary);
+}
+.activeSideLink {
+  color: var(--color-primary);
+  border-left: 3px solid var(--color-primary);
+}
+.form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1rem;
+}
+.loginForm {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  border: 3px solid var(--color-body);
+  border-radius: 5px;
+  height: 400px;
+  width: 300px;
+  margin: 10px 0;
+}
+input {
+  width: 150px;
+  height: 30px;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+}
+button {
+  height: 30px;
+  width: 70px;
+  margin: 0 10px;
+  border: 1px solid var(--color-body);
+  border-radius: 5px;
+}
+
+button:active{
+  background-color: #fff;
+
 }
